--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             input.value = '';
 
             try {
-                const response = await fetch('https://my-ai-pet-backend.onrender.com/dialog', {
+                const response = await fetch('https://catyiqian-my-pet.onrender.com/dialog', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
